--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,5 @@
     <string name="action_settings">Settings</string>
 
     <!-- error open camera -->
-    <string name="err_camera_open"></string>
+    <string name="err_camera_open">Camera Error. Failed to Open. Error:</string>
 </resources>
